@@ -1,6 +1,16 @@
 1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* ext2fs.h: Add #include <sys/mman.h> for munmap decl.
+	
+1999-07-06  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* dir.c (diskfs_get_directs): Use mmap instead of vm_allocate. 
+	* hyper.c (allocate_mod_map): Likewise.
+	(get_hypermetadata): Likewise.
+	* pager.c (get_page_buf): Likewise.
+
+	* hyper.c (diskfs_readonly_changed): Use mprotect instead of
+	vm_protect. 
 
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
